# jupiterobot2

./: README.md  install_pkgs.sh
coffee_simu_delivery/: coffee_delivery.ui  main.py
coffee_simu_delivery/maps/: JupiterOfficeSim.pgm  JupiterOfficeSim.yaml  coffee_map.pgm  coffee_map.yaml  simple.pgm  simple.yaml
coffee_simu_delivery/worlds/: AIWILL_Robot.world  Jupiter_Robot_Office.world  coffee_simu_delivery.world  simple.world
jupiterobot2_apps/jupiterobot2_follower/: CMakeLists.txt  package.xml
jupiterobot2_apps/jupiterobot2_follower/launch/: follower.launch
jupiterobot2_apps/jupiterobot2_follower/src/: follower.cpp
jupiterobot2_apps/jupiterobot2_gesture_photograph/: CMakeLists.txt  package.xml
jupiterobot2_apps/jupiterobot2_gesture_photograph/launch/: gesture_photograph.launch
jupiterobot2_apps/jupiterobot2_move_grasp/: CMakeLists.txt  package.xml
jupiterobot2_apps/jupiterobot2_move_grasp/launch/: gpsr_drivers.launch  gpsr_mission.launch
jupiterobot2_apps/jupiterobot2_move_grasp/scripts/: base_adjust_for_grasp.py  base_control.py  color_detect.py  mission_demo.py  navigation_node.py  target_tf.py
jupiterobot2_apps/jupiterobot2_move_grasp/src/: arm_pose.cpp
jupiterobot2_apps/jupiterobot2_move_grasp/test/: hsv_test.py  voice.corpus  voice.dic  voice.lm
jupiterobot2_apps/jupiterobot2_partybot/: CMakeLists.txt  package.xml
jupiterobot2_apps/jupiterobot2_partybot/launch/: partybot.launch
jupiterobot2_apps/jupiterobot2_spark/: CMakeLists.txt  package.xml
jupiterobot2_apps/jupiterobot2_teleop_key_gui/: CMakeLists.txt  package.xml
jupiterobot2_arm/jupiterobot2_arm_bringup/: CMakeLists.txt  package.xml
jupiterobot2_arm/jupiterobot2_arm_bringup/config/: arm_group_joints_trajectory_controller.yaml  gripper_group_joints_trajectory_controller.yaml  jupiterobot2_arm.yaml
jupiterobot2_arm/jupiterobot2_arm_bringup/launch/: arm.launch
jupiterobot2_arm/jupiterobot2_arm_description/: CMakeLists.txt  package.xml
jupiterobot2_arm/jupiterobot2_arm_description/urdf/: arm_hardware.xacro  jupiterobot2_arm.urdf.xacro  jupiterobot2_arm.xacro  jupiterobot2_arm_gazebo.xacro  jupiterobot2_gripper.xacro
jupiterobot2_bringup/: CMakeLists.txt  package.xml
jupiterobot2_bringup/config/: jupiterobot2_arm_head.yaml
jupiterobot2_bringup/launch/: arm_head_bringup.launch  jupiterobot2_bringup.launch  jupiterobot2_core.launch  jupiterobot2_lidar.launch  jupiterobot2_rviz_model.launch  moveit_bringup.launch
jupiterobot2_description/: CMakeLists.txt  package.xml
jupiterobot2_description/rviz/: lite.rviz
jupiterobot2_description/urdf/: common_properties.xacro  jupiter2_gazebo.xacro  jupiter2_lite.urdf.xacro  jupiter2_pro.urdf.xacro
jupiterobot2_gazebo/: CMakeLists.txt  package.xml
jupiterobot2_gazebo/config/: controllers.yaml
jupiterobot2_gazebo/launch/: jupiterobot2_world.launch  trajectory_controller.launch
jupiterobot2_head/jupiterobot2_head_bringup/: CMakeLists.txt  package.xml
jupiterobot2_head/jupiterobot2_head_bringup/config/: head_group_joints_trajectory_controller.yaml  jupiterobot2_head.yaml
jupiterobot2_head/jupiterobot2_head_bringup/launch/: head.launch
jupiterobot2_head/jupiterobot2_head_description/: CMakeLists.txt  package.xml
jupiterobot2_head/jupiterobot2_head_description/meshes/: camera.stl
jupiterobot2_head/jupiterobot2_head_description/urdf/: camera_top.urdf.xacro  head_hardware.xacro  jupiterobot2_head.urdf.xacro  jupiterobot2_head.xacro  jupiterobot2_head_gazebo.xacro
jupiterobot2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jupiterobot2_moveit_config/config/: fake_controllers.yaml  gazebo_jupiter2_lite.urdf  gazebo_jupiter2_pro.urdf  joint_limits.yaml  jupiter2_lite.srdf  jupiter2_pro.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sim_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
jupiterobot2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
jupiterobot2_msgs/: CMakeLists.txt  package.xml
jupiterobot2_msgs/msg/: Joint.msg  Mediapipe_Face.msg  Mediapipe_FaceBbox.msg  Mediapipe_FaceBboxes.msg  Mediapipe_Hand.msg  Mediapipe_Pose.msg  ObjectMsg.msg  YoloMsg.msg
jupiterobot2_msgs/srv/: Follow.srv
jupiterobot2_navigation/: CMakeLists.txt  package.xml
jupiterobot2_navigation/launch/: jupiterobot2_navigation.launch  jupiterobot2_slam.launch
jupiterobot2_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
jupiterobot2_teleop/: CMakeLists.txt  package.xml
jupiterobot2_teleop/launch/: joystick_teleop.launch  keyboard_teleop.launch
jupiterobot2_teleop/scripts/: keyboard_teleop
jupiterobot2_teleop/src/: joy_teleop_arm.cpp  joy_teleop_base.cpp  joystick_teleop.cpp
jupiterobot2_vision/jupiterobot2_vision_mediapipe/: CMakeLists.txt  package.xml
jupiterobot2_vision/jupiterobot2_vision_yolov5/: CMakeLists.txt  package.xml
jupiterobot2_vision/jupiterobot2_vision_yolov5/launch/: object_detection.launch
jupiterobot2_vision/jupiterobot2_vision_yolov5/scripts/: detect.py  detector.py  object_detection.py  object_detection_tf.py  object_tf.py
jupiterobot2_voice/jupiterobot2_voice_ps/: CMakeLists.txt  package.xml
jupiterobot2_voice/jupiterobot2_voice_ps/launch/: voice_control.launch  voice_control_step.launch  voice_recognition.launch
jupiterobot2_voice/jupiterobot2_voice_ps/scripts/: voice_control_example.py
jupiterobot2_voice/jupiterobot2_voice_xf/: CMakeLists.txt  package.xml
jupiterobot2_voice/jupiterobot2_voice_xf/launch/: repeat_voice.launch  voice_assistant.launch
jupiterobot2_voice/jupiterobot2_voice_xf/src/: iat_publish.cpp  linuxrec.c  speech_recognizer.c  tts_subscribe.cpp  voice_assistant.cpp
(+43 files in other folders)
