<?xml version="1.0"?>
<package format="2">
  <name>jupiterobot2_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for Jupiter 2.
  </description>
  <author email="support@jupiterobot.com">Jupiter Robot</author>
  <maintainer email="support@jupiterobot.com">Jupiter Robot</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>jupiterobot2_description</exec_depend>
</package>
