<package>
  <name>jupiterobot2_teleop</name>
  <version>1.0.0</version>
  <description>The jupiterobot2 teleoperation package</description>
  <maintainer email="support@jupiterobot.com">jupiterobot</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
</package>
