<package>
  <name>jupiterobot2_head_bringup</name>
  <version>1.0.0</version>
  <description>
   jupiterobot2_head_bringup provides launch files for starting the drivers for the Jupiter2 head.
  </description>
  <author>Dante Huang</author>
  <author>Qiang Liu</author>
  <maintainer email="support@jupiterobot.com">Dante</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
