<package>
  <name>jupiterobot2_head_description</name>
  <version>1.0.0</version>
  <description>
   jupiterobot2_head_description contains urdf files and meshes for the Jupiter2 head.
  </description>
  <author>Dante Huang</author>
  <author>Qiang Liu</author>
  <maintainer email="support@jupiterobot.com">Dante</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
